Fix menu on mobile

--- a/client/css/_header.scss
+++ b/client/css/_header.scss
@@ -69,7 +69,7 @@
   .menu-navicon {
     display: block;
     float: right;
-    padding: 1.1rem .6rem 1.6rem 0;
+    padding: 1.5rem .6rem 1.6rem 0;
 
     button {
       background-color: $main-font-color;
@@ -94,11 +94,11 @@
   }
 
   .menu-dropdown {
-    background-color: $main-font-color;
+    background-color: $bg-color;
     justify-content: space-between;
-    padding: .8rem;
+    padding: .4rem .8rem;
     position: absolute;
-    top: 3.6rem;
+    top: 4rem;
     width: 6rem;
     right: 0;
     z-index: 20;
@@ -106,6 +106,7 @@
 
   .menu-dropdown-wrapper {
     margin: .4rem 0;
+    overflow: hidden;
 
     .menu-item {
       margin-bottom: .6rem;
@@ -115,6 +116,7 @@
       width: 8rem;
 
       a {
+        color: $light-font-color;
         font-size: 1.2rem;
       }
 
@@ -125,10 +127,10 @@
   }
 
   .menu-dropdown-sublist {
-    background-color: $main-font-color;
+    background-color: $bg-color;
     position: absolute;
     right: 8rem;
-    top: 4.2rem;
+    top: 3.9rem;
     width: 18rem;
     z-index: 20;
   }
@@ -137,6 +139,6 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    padding: .8rem;
+    padding: .4rem .8rem;
   }
 }
